2007-06-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_auth_anonymous.erl: Do not purge non anonymous accounts
	when using anonymous authentication with another type of auth.

	* src/ejabberd_service.erl: Added an option to disable from attribute
	checks in packets coming from an external component (EJAB-275)
	* doc/guide.tex: Likewise

	* doc/guide.tex: Documentation rework started (EJAB-272)
	* doc/introduction.tex: Likewise

2007-06-28  Christophe Romain <christophe.romain@process-one.net>

	* src/web/ejabberd_web_admin.erl: corrects (EJAB-273),
	remove obsolete OnlineUsers calculation

2007-06-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Include <body/> in MUC invitations
	for older clients (thanks to Michael Scherer)

2007-06-25  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Typos

	* src/mod_muc/mod_muc_room.erl: New anti-abuse options:
	min_presence_interval and min_message_interval
	* doc/guide.tex: Likewise 

	* doc/guide.tex: Documentation improvements on watchdog

	* doc/guide.tex: No need to escape underscore in Latex verbatim
	sections

	* doc/guide.tex: Watchdog alert documentation
	* src/ejabberd.cfg.example: Likewise

2007-06-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc.erl: Added an option for default IRC
	encoding (thanks to Badlop)
	* doc/guide.tex: Updated

	* src/mod_disco.erl: Don't override accumulated value in
	get_local_identity/5 (thanks to Magnus Henoch and Badlop)

	* src/web/ejabberd_web_admin.erl: Added links to server and
	virtual host homes (thanks to Badlop)

2007-06-20  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc_room.erl: It is now possible to limit who is
	allowed to create persistent MUC rooms (Thanks to Badlop) (EJAB-257)
	* src/mod_muc/mod_muc.erl: Likewise
	* doc/guide.tex: Likewise
	* src/ejabberd.cfg.example: Likewise

2007-06-18  Mickael Remond  <mickael.remond@process-one.net>
