@@ -1,3 +1,12 @@
+2007-06-29  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/ejabberd_config.erl: Normalize hostnames in config file. If mixed
+	case is used, the hostname will be now useable (EJAB-277).
+	* src/stringprep/stringprep_sup.erl: Likewise
+	* src/stringprep/Makefile.in: Likewise
+	* src/stringprep/Makefile.win32: Likewise
+	* src/ejabberd_app.erl: Likewise
+
 2007-06-28  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/ejabberd_auth_anonymous.erl: Do not purge non anonymous accounts
